[gd_scene load_steps=14 format=3 uid="uid://cgs6rjryy4laq"]

[ext_resource type="Script" path="res://scripts/stunt.gd" id="1_gkgyd"]
[ext_resource type="Texture2D" uid="uid://br43d1hbfcwjg" path="res://Sprites/Icons/cursor_down.png" id="2_ab83y"]
[ext_resource type="Texture2D" uid="uid://h0rejwyqm7ho" path="res://Sprites/Icons/cursor_up.png" id="3_5a0l8"]
[ext_resource type="Texture2D" uid="uid://csowvicix6mmp" path="res://Sprites/Icons/trashcan.png" id="4_irkli"]
[ext_resource type="Texture2D" uid="uid://fuhncya7jspa" path="res://Sprites/Icons/trashcanOpen.png" id="5_44tg0"]
[ext_resource type="Script" path="res://scripts/delete_button.gd" id="6_5g0o7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tdan6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_56hem"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hdrat"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eibt1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sq353"]

[sub_resource type="Theme" id="Theme_vgt58"]
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/decrement_pressed = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/icons/increment_pressed = null
VScrollBar/styles/grabber = SubResource("StyleBoxEmpty_tdan6")
VScrollBar/styles/grabber_highlight = SubResource("StyleBoxEmpty_56hem")
VScrollBar/styles/grabber_pressed = SubResource("StyleBoxEmpty_hdrat")
VScrollBar/styles/scroll = SubResource("StyleBoxEmpty_eibt1")
VScrollBar/styles/scroll_focus = SubResource("StyleBoxEmpty_sq353")

[sub_resource type="LabelSettings" id="LabelSettings_ey22d"]
font_size = 14

[node name="stunt" type="VBoxContainer" node_paths=PackedStringArray("stunt_edit_line", "stunt_description_edit_line", "stunt_line", "stunt_description_line", "stunt_description", "_del_button", "expand_button", "line_label", "edit", "change")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gkgyd")
stunt_edit_line = NodePath("name/name_edit")
stunt_description_edit_line = NodePath("description/scroll/holder/descr_edit")
stunt_line = NodePath("name/name")
stunt_description_line = NodePath("description/scroll/holder/descr")
stunt_description = NodePath("description/scroll")
_del_button = NodePath("name/delete_button")
expand_button = NodePath("name/expand")
expand_down_texture = ExtResource("2_ab83y")
expand_up_texture = ExtResource("3_5a0l8")
editabled = true
line_label = NodePath("name/name")
edit = NodePath("name/name_edit")
change = NodePath("name/edit_button")

[node name="name" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="delete_button" type="TextureButton" parent="name"]
visible = false
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
texture_normal = ExtResource("4_irkli")
texture_pressed = ExtResource("5_44tg0")
texture_hover = ExtResource("5_44tg0")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("6_5g0o7")

[node name="name" type="Label" parent="name"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Трюк"
vertical_alignment = 1
autowrap_mode = 3

[node name="name_edit" type="LineEdit" parent="name"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
placeholder_text = "Трюк"

[node name="edit_button" type="Button" parent="name"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
text = "edit"

[node name="expand" type="Button" parent="name"]
custom_minimum_size = Vector2(40, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("3_5a0l8")
icon_alignment = 1
expand_icon = true

[node name="description" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="scroll" type="ScrollContainer" parent="description"]
layout_mode = 2
theme = SubResource("Theme_vgt58")
horizontal_scroll_mode = 0

[node name="holder" type="VBoxContainer" parent="description/scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="descr" type="Label" parent="description/scroll/holder"]
layout_mode = 2
label_settings = SubResource("LabelSettings_ey22d")
autowrap_mode = 3

[node name="descr_edit" type="TextEdit" parent="description/scroll/holder"]
visible = false
layout_mode = 2
placeholder_text = "Описание трюка"
drag_and_drop_selection_enabled = false
wrap_mode = 1
scroll_fit_content_height = true

[connection signal="delete" from="name/delete_button" to="." method="_on_delete_button_delete"]
[connection signal="pressed" from="name/expand" to="." method="expand_button_press"]
[connection signal="resized" from="description/scroll/holder/descr_edit" to="." method="_on_descr_edit_resized"]
